--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ngx-angular8-sweetalert2",
-  "version": "9.8.1",
+  "version": "9.8.2",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DenisGold/ngx-angular8-sweetalert2.git"
   },
-  "homepage": "https://github.com/DenisGold/ngx-angular8-sweetalert2#readme",
+  "homepage": "https://indeema.com",
   "description": "Fixed JSDoc Issue! A beautiful, responsive, customizable and accessible (WAI-ARIA) replacement for JavaScript's popup boxes, supported fork of sweetalert",
   "main": "dist/sweetalert2.all.js",
   "browser": "dist/sweetalert2.all.js",
